--- a/css/mainUI.css
+++ b/css/mainUI.css
@@ -7,20 +7,21 @@
     border: 0px ;
 	
 	height:87px;
+	width:1200px;
 	
-    display: flex;
-	
+/*    display: flex;
+
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 400px;
-	flex-wrap: wrap;
+	flex-wrap: wrap;*/
 
 	
 	
 }
 
 .tab-button {
-	
+	display:inline-block;
     background-image: url('../img/tab-red_03.png');
     background-repeat: no-repeat;
 	height:77px;
@@ -121,13 +122,9 @@ button, .button {
    
    
    .thing {
-       display: flex;
-	
-       flex-grow: 0;
-       flex-shrink: 0;
-       flex-basis: 400px;
-	   flex-wrap: wrap;
-   	
+
+   	display:none;
+   		
        border-bottom: 4px solid gray;
 	
 	
