--- a/css/mainUI.css
+++ b/css/mainUI.css
@@ -76,6 +76,10 @@
 }
 
 
+
+
+
+
 button, .button {
   border-style: solid;
   border-width: 0px;
@@ -108,6 +112,28 @@ button, .button {
  button:hover, button:focus, .button:hover, .button:focus {
    color: white; }
    
+   
+
+   .tagfilter {
+      background-color: white;
+      color: green;
+   
+      border: 1px solid green;
+      border-radius: 12px;
+   
+      margin: 0;
+   
+   
+   
+      padding-top: 0.1rem;
+      padding-bottom: 0.1rem;
+   
+      padding-right: .5rem;
+      padding-left: .5rem;
+      font-size: .5rem;
+      font-weight: bold;
+	
+   }  
    
 .del {
 	display:none;
