--- a/css/mainUI.css
+++ b/css/mainUI.css
@@ -135,6 +135,61 @@ button, .button {
 	
    }  
    
+   
+   .activeFilters {
+   	display:block;
+   	width:500px;
+   	background:gray;
+   }
+   
+   .filter-container {
+   	display:inline-block;
+   	margin-left:1rem;
+   	margin-right:1rem;
+   	margin-bottom:1px;
+    line-height: 240%;
+	
+   }
+
+   .filter-text {
+   	height:2em;
+    border-radius: 12px;
+    padding-right: .5rem;
+    padding-left: .5rem;
+	
+	
+   	background:blue;
+   	color:white;
+	
+   }
+
+
+   .filter-close-x {
+
+    margin: 0;
+    position: relative;
+	top:-0.75rem;
+	
+    text-decoration: none;
+    text-align: center;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    display: inline-block;
+    padding-top: .1rem;
+    padding-right: .2rem;
+    padding-bottom: .1rem;
+    padding-left: .2rem;
+    font-size: 1rem;
+    background-color: white;
+    border-color: #2285a2;
+    color: blue;
+    transition: background-color 300ms ease-out;
+    border-radius: 2px;
+	
+	
+   }
+   
+   
 .del {
 	display:none;
 	   background-color: red;
